[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "waterout"
version = "0.1.0"
description = "Remove watermarks and enhance photos with AI image-editing APIs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
hunyuan = ["tencentcloud-sdk-python"]
dev = ["pytest"]

[project.scripts]
waterout      = "waterout:main"
enhance-one   = "enhance_one:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
